@@ -1,8 +1,0 @@
-polkit.addRule(function(action, subject) {
-    if ((action.id == "org.freedesktop.consolekit.system.stop" || action.id == "org.freedesktop.consolekit.system.restart")) {
-        return polkit.Result.YES;
-    }
-    else {
-        return polkit.Result.NO;
-    }
-});
